--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -82,8 +82,8 @@
       "welcome": "Hello {{ name }}. To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
     },
     "new-event-active-trigger": {
-      "welcome": "Hello {{ name }}. A new trigger warning for <strong>{{ timeUnits }} days from today</strong> has been activated for <strong>{{ disasterTypeLabel }}</strong>.",
-      "new-event-early-trigger": "The system however detects a trigger as soon as <strong>{{ timeUnits }} days from today</strong>, which was not detectable earlier."
+      "welcome": "Hello {{ name }}. A new trigger warning for <strong>{{ leadTime }} {{ timeUnit }} from today</strong> has been activated for <strong>{{ disasterTypeLabel }}</strong>.",
+      "new-event-early-trigger": "The system however detects a trigger as soon as <strong>{{ leadTime }} {{ timeUnit }} from today</strong>, which was not detectable earlier."
     },
     "active-event-active-trigger": {
       "welcome": "Hello {{ name }} A trigger warning for <strong>{{ disasterTypeLabel }}</strong> has earlier been activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ days }} days</strong> away."
@@ -92,7 +92,7 @@
       "welcome": "Hello {{ name }}. There is <strong>no active trigger</strong> any more (as you can see in the map). However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
     },
     "active-event": {
-      "instruction": "The potentially exposed areas are listed below in order of number of people potentially exposed per area. You can select and send the pre-planned anticipatory actions executed in each area and eventually close the event. Select an area in the map, to show only the actions for that area.",
+      "instruction": "Please select the area on the map to monitor, select and send the pre-planned anticipatory actions executed in each area and eventually close the event.",
       "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
       "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
       "submit-button-label": "Save",
@@ -113,7 +113,7 @@
       },
       "new-event-active-trigger": {
         "welcome": "Hello {{ name }}. A {{ disasterTypeLabel }} alert for has been activated for <strong>{{ monthYear }}</strong>.",
-        "new-event-early-trigger": "The system however detects an alert as soon as <strong>{{ timeUnits }} month(s) from now</strong>, which was not detectable earlier."
+        "new-event-early-trigger": "The system however detects an alert as soon as <strong>{{ leadTime }} month(s) from now</strong>, which was not detectable earlier."
       },
       "active-event-active-trigger": {
         "welcome": "Hello {{ name }}. A {{ disasterTypeLabel }} alert has earlier been activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ monthYear }}</strong>."
