--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -62,14 +62,14 @@
         "ETH": "Number of potential malaria cases, based on malaria risk and demographic data."
       },
       "potential_cases_U5": {
-        "ETH": "Number of potential malaria cases among children under 5 years of age, based on malaria risk and demographic data."
+        "ETH": "Potential cases under 5. Vulnerable population group Ethiopia: High Resolution Population Density Maps + Demographic Estimates.<br /><br />Source Data: <a href='https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates'>https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates</a>"
       },
       "potential_cases_U9": {
         "PHL": "Number of potential dengue cases among children under 9 years of age, based on dengue risk and demographic data. <br /><br />Source demographic data: <a href=\"https://data.humdata.org/dataset/philippines-pre-disaster-indicators\">https://data.humdata.org/dataset/philippines-pre-disaster-indicators/</a>"
       },
       "potential_cases_65": {
         "PHL": "Number of potential dengue cases among people above 65 years of age, based on dengue risk and demographic data. <br /><br />Source demographic data: <a href=\"https://data.humdata.org/dataset/philippines-pre-disaster-indicators\">https://data.humdata.org/dataset/philippines-pre-disaster-indicators/</a>",
-        "ETH": "Number of potential malaria cases among people above 65 years of age, based on malaria risk and demographic data."
+        "ETH": "Elderly: vulnerable population group Ethiopia: High Resolution Population Density Maps + Demographic Estimates https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates"
       },
       "small_ruminants_exposed": {
         "ZWE": "Exposed small ruminants per province. Small ruminants exists of the summarised number sheep & goats livestock numbers multiplied with the Livestock unit (LSU): 0.1 as reference unit to aggregate livestock from various species.<br /><br />Source Links:<ul><li><a href=\"https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Livestock_unit_(LSU)\">https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Livestock_unit_(LSU)</a>.<li>Source Zimbabwe: small ruminants (sheeps and goats) numbers within the 2nd round crop- and livestock assessment report 2020/2021 season. Published: 21st of April 2021. Source assessment: <a href=\"https://fscluster.org/zimbabwe/document/second-round-crop-and-livestock-0\">https://fscluster.org/zimbabwe/document/second-round-crop-and-livestock-0</a></li></ul>"
@@ -174,6 +174,9 @@
         "UGA": "Percentage of people living in female headed households.<br /><br />Source Data: <a href='https://unstats.un.org/unsd/demographic/sources/census/wphc/Uganda/UGA-2016-05-23.pdf'>https://unstats.un.org/unsd/demographic/sources/census/wphc/Uganda/UGA-2016-05-23.pdf.</a> Year: 2014.",
         "PHL": "Percentage of people living in female-headed households. <br /><br />Source demographic data: <a href=\"https://data.humdata.org/dataset/philippines-pre-disaster-indicators\">https://data.humdata.org/dataset/philippines-pre-disaster-indicators/</a>"
       },
+      "population_u5": {
+        "ETH": "undear age:vulnerable population group Ethiopia: High Resolution Population Density Maps + Demographic Estimates.<br /><br />Source Data: <a href='https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates'>https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates</a>"
+      },
       "population_u8": {
         "UGA": "Percentage of people under 8 years old.<br /><br />Source Data: <a href='https://unstats.un.org/unsd/demographic/sources/census/wphc/Uganda/UGA-2016-05-23.pdf'>https://unstats.un.org/unsd/demographic/sources/census/wphc/Uganda/UGA-2016-05-23.pdf.</a> Year: 2014."
       },
@@ -248,14 +251,14 @@
         "ETH": "Number of potential malaria cases, based on malaria risk and demographic data."
       },
       "potential_cases_U5": {
-        "ETH": "Number of potential malaria cases among children under 5 years of age, based on malaria risk and demographic data."
+        "ETH": "Potential cases under 5. Vulnerable population group Ethiopia: High Resolution Population Density Maps + Demographic Estimates.<br /><br />Source Data: <a href='https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates'>https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates</a>"
       },
       "potential_cases_U9": {
         "PHL": "Number of potential dengue cases among children under 9 years of age, based on dengue risk and demographic data. <br /><br />Source demographic data: <a href=\"https://data.humdata.org/dataset/philippines-pre-disaster-indicators\">https://data.humdata.org/dataset/philippines-pre-disaster-indicators/</a>"
       },
       "potential_cases_65": {
         "PHL": "Number of potential dengue cases among people above 65 years of age, based on dengue risk and demographic data. <br /><br />Source demographic data: <a href=\"https://data.humdata.org/dataset/philippines-pre-disaster-indicators\">https://data.humdata.org/dataset/philippines-pre-disaster-indicators/</a>",
-        "ETH": "Number of potential malaria cases among people above 65 years of age, based on malaria risk and demographic data."
+        "ETH": "Elderly: vulnerable population group Ethiopia: High Resolution Population Density Maps + Demographic Estimates https://data.humdata.org/dataset/ethiopia-high-resolution-population-density-maps-demographic-estimates"
       },
       "small_ruminants": {
         "ZWE": "Small ruminants exists of the summarised number sheep & goats livestock numbers multiplied with the Livestock unit (LSU): 0.1 as reference unit to aggregate livestock from various species.<br /><br />Source Links:<ul><li><a href=\"https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Livestock_unit_(LSU)\">https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Livestock_unit_(LSU)</a>.<li>Source Zimbabwe: small ruminants (sheeps and goats) numbers within the 2nd round crop- and livestock assessment report 2020/2021 season. Published: 21st of April 2021. Source assessment: <a href=\"https://fscluster.org/zimbabwe/document/second-round-crop-and-livestock-0\">https://fscluster.org/zimbabwe/document/second-round-crop-and-livestock-0</a></li></ul>"
@@ -268,6 +271,36 @@
       },
       "cattle_exposed": {
         "ZWE": "Exposed cattle per province. Livestock numbers cattle exists of the number of cattle multiplied with the Livestock unit (LSU): 1.0  as reference unit to aggregate livestock from various species.<br /><br />Source Links:<ul><li><a href=\"https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Livestock_unit_(LSU)\">https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Livestock_unit_(LSU)</a>.<li>Source Zimbabwe: small ruminants (sheeps and goats) numbers within the 2nd round crop- and livestock assessment report 2020/2021 season. Published: 21st of April 2021. Source assessment: <a href=\"https://fscluster.org/zimbabwe/document/second-round-crop-and-livestock-0\">https://fscluster.org/zimbabwe/document/second-round-crop-and-livestock-0</a></li></ul>"
+      },
+      "Hotspot_General": {
+        "ETH": "Woreda need priority class: Hotspot Woredas Classification Final <a href=\"http://www.ndrmc.gov.et/\">http://www.ndrmc.gov.et/</a>"
+      },
+      "Hotspot_Water": {
+        "ETH": "WASH  need priority class: Hotspot Woredas Classification WASH <a href=\"http://www.ndrmc.gov.et/\">http://www.ndrmc.gov.et/</a>"
+      },
+      "Hotspot_Health": {
+        "ETH": "Health  need priority class: Hotspot Woredas Classification Health <a href=\"http://www.ndrmc.gov.et/\">http://www.ndrmc.gov.et/</a>"
+      },
+      "IPC_forecast_short": {
+        "ETH": "IPC short forecast: Most likely food security outcomes - the near-term projection  <a href=\"https://fews.net/IPC\">https://fews.net/IPC</a>"
+      },
+      "IPC_forecast_long": {
+        "ETH": "IPC long forecast: Most likely food security outcomes -  the medium-term projection <a href=\"https://fews.net/IPC\">https://fews.net/IPC</a>"
+      },
+      "walking_travel_time_to_health": {
+        "ETH": "Access to Health walking: Estimated travel time (minutes) to the nearest healthcare facility, walking <a href=\"https://malariaatlas.org/research-project/accessibility-to-healthcare/\">https://malariaatlas.org/research-project/accessibility-to-healthcare/</a>"
+      },
+      "motorized_travel_time_to_health": {
+        "ETH": "Access to Health with vehicle: Estimated travel time (minutes) to the nearest healthcare facility, with motorized vehicle <a href=\"https://malariaatlas.org/research-project/accessibility-to-healthcare/\">https://malariaatlas.org/research-project/accessibility-to-healthcare/</a>"
+      },
+      "malaria_suitable_temperature": {
+        "ETH": "Malaria suitability:Temperature suitability index for Plasmodium vivax transmission, 2010 <a href=\"https://malariaatlas.org/research-project/accessibility-to-healthcare/\">https://malariaatlas.org/research-project/accessibility-to-healthcare/</a>"
+      },
+      "malaria_risk": {
+        "ETH": "Malaria risk:Spatial limits of Plasmodium vivax malaria transmission (0-none 2- high)  <a href=\"https://malariaatlas.org/\">https://malariaatlas.org/</a>"
+      },
+      "total_idps": {
+        "ETH": "Total Internally Displaced People (IDPs) DTM Ethiopia National Displacement Report 7_2022"
       },
       "alert_threshold": {
         "PHL": "Administrative divisions that reached alert threshold, in terms of number of potential cases. <br /><br /> See definition at: <a href=\"https://rodekruis.sharepoint.com/sites/510-CRAVK-510/Gedeelde%20%20documenten/Forms/AllItems.aspx?id=%2Fsites%2F510%2DCRAVK%2D510%2FGedeelde%20%20documenten%2F%5BRD%5D%20Epidemics%20Priority%20Index%2FIBF%2Ddengue%2Fdocuments%2FIBF%5Fdengue%5Ftechnical%5Fnote%2Epdf&parent=%2Fsites%2F510%2DCRAVK%2D510%2FGedeelde%20%20documenten%2F%5BRD%5D%20Epidemics%20Priority%20Index%2FIBF%2Ddengue%2Fdocuments&p=true&originalPath=aHR0cHM6Ly9yb2Rla3J1aXMuc2hhcmVwb2ludC5jb20vc2l0ZXMvNTEwLUNSQVZLLTUxMC9fbGF5b3V0cy8xNS9ndWVzdGFjY2Vzcy5hc3B4P2RvY2lkPTBmOTI0OWIzNWRhNGQ0YzBhOTg1YjMzMzkzZmMzODhkZiZhdXRoa2V5PUFRU0xubmFmR0YtTTJ0MUNHSWcwaGRBJmV4cGlyYXRpb249MjAyMi0wNi0xNFQyMiUzYTAwJTNhMDAuMDAwWiZydGltZT1TS016R0dzeDJVZw\"> link to technical documentation</a>",
