feat: link of activation page AB#9483

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -3,6 +3,9 @@
   "common": {
     "version": "Version"
   },
+  "activation-page": {
+    "activation-report": "Activation Report"
+  },
   "login-page": {
     "title": "Login",
     "welcome": "Hello! Welcome to IBF.",
