--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -87,15 +87,11 @@
     "no-event-no-trigger": {
       "welcome": "Hello {{ name }}. To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
     },
-    "new-event-active-trigger": {
-      "welcome": "Hello {{ name }}. A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}</strong> away.",
-      "new-event-early-trigger": "The system however detects a trigger as soon as <strong>{{ leadTime }} {{ timeUnit }} from today</strong>, which was not detectable earlier."
-    },
     "active-event-active-trigger": {
-      "welcome": "Hello {{ name }} A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}</strong> away."
+      "welcome": "Hello {{ name }}. A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> away."
     },
     "active-event-no-trigger": {
-      "welcome": "Hello {{ name }}. There is <strong>no active trigger</strong> any more (as you can see in the map). However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
+      "welcome": "Hello {{ name }}. There is <strong>no active trigger</strong> any more (as can be seen in the map). However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
     },
     "active-event": {
       "instruction": "Please select the area on the map to monitor, select and send the pre-planned anticipatory actions executed in each area and eventually close the event.",
@@ -117,12 +113,8 @@
       "no-event-no-trigger": {
         "welcome": "Hello {{ name }}. To your right is the map of your country, where you can turn layers on and off. There are currently <strong>no alerts</strong> for dengue activated."
       },
-      "new-event-active-trigger": {
-        "welcome": "Hello {{ name }}. A {{ disasterTypeLabel }} alert for has been activated for <strong>{{ monthYear }}</strong>.",
-        "new-event-early-trigger": "The system however detects an alert as soon as <strong>{{ leadTime }} month(s) from now</strong>, which was not detectable earlier."
-      },
       "active-event-active-trigger": {
-        "welcome": "Hello {{ name }}. A {{ disasterTypeLabel }} alert has earlier been activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ monthYear }}</strong>."
+        "welcome": "Hello {{ name }}. A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ monthYear }}</strong>."
       },
       "active-event-no-trigger": {
         "welcome": "Hello {{ name }}. There is <strong>no alert</strong> active any more (as you can see in the map). However, you can still see here the SOP actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here until the end of the month."
@@ -139,12 +131,8 @@
       "no-event-no-trigger": {
         "welcome": "Hello {{ name }}. To your right is the map of your country, where you can turn layers on and off. There are currently <strong>no alerts</strong> for malaria activated."
       },
-      "new-event-active-trigger": {
-        "welcome": "Hello {{ name }}. A {{ disasterTypeLabel }} alert for has been activated for <strong>{{ monthYear }}</strong>.",
-        "new-event-early-trigger": "The system however detects an alert as soon as <strong>{{ timeUnits }} month(s) from now</strong>, which was not detectable earlier."
-      },
       "active-event-active-trigger": {
-        "welcome": "Hello {{ name }}. A {{ disasterTypeLabel }} alert has earlier been activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ monthYear }}</strong>."
+        "welcome": "Hello {{ name }}. A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ monthYear }}</strong>."
       },
       "active-event-no-trigger": {
         "welcome": "Hello {{ name }}. There is <strong>no alert</strong> active any more (as you can see in the map). However, you can still see here the SOP actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here until the end of the month."
