--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -87,6 +87,9 @@
   },
   "chat-component": {
     "about-button-label": "About Trigger",
+    "warn-label": {
+      "message": "Warn message will come here. {{ leadTime }} day(s)"
+    },
     "no-event-no-trigger": {
       "welcome": "Hello {{ name }}. To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
     },
@@ -113,6 +116,9 @@
     },
     "heavy-rain": {
       "about-button-label": "About Trigger",
+      "warn-label": {
+        "message": "Warn message will come here. {{ leadTime }}"
+      },
       "no-event-no-trigger": {
         "welcome": "Hello {{ name }}. To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
       },
@@ -140,6 +146,9 @@
     },
     "dengue": {
       "about-button-label": "About Dengue Alerts",
+      "warn-label": {
+        "message": "Warn message will come here. {{ leadTime }}"
+      },
       "no-event-no-trigger": {
         "welcome": "Hello {{ name }}. To your right is the map of your country, where you can turn layers on and off. There are currently <strong>no alerts</strong> for dengue activated."
       },
@@ -158,6 +167,9 @@
     },
     "malaria": {
       "about-button-label": "About Malaria Alerts",
+      "warn-label": {
+        "message": "Warn message will come here. {{ leadTime }}"
+      },
       "no-event-no-trigger": {
         "welcome": "Hello {{ name }}. To your right is the map of your country, where you can turn layers on and off. There are currently <strong>no alerts</strong> for malaria activated."
       },
