--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -88,7 +88,7 @@
   "chat-component": {
     "about-button-label": "About Trigger",
     "warn-label": {
-      "message": "Warn message will come here. {{ leadTime }} day(s)"
+      "message": "Following information is based on the model last run on {{leadTime}}."
     },
     "no-event-no-trigger": {
       "welcome": "Hello {{ name }}. To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
