--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -11,7 +11,9 @@
     "welcome": "Hello! Welcome to IBF.",
     "instruction": "This chat will guide you through the system. You will find it to the left of the screen. Please login below.",
     "video": "Click to watch the IBF Video Guide.",
-    "note": "NOTE: This dashboard works best in Chrome, Firefox, Safari and Microsoft Edge. The dashboard is not compatible with Internet Explorer."
+    "note": "NOTE: This dashboard works best in Chrome, Firefox, Safari and Microsoft Edge. The dashboard is not compatible with Internet Explorer.",
+    "forgot-password": "Forgot password?",
+    "forgot-password-message": "If you forgot your password please send a request to "
   },
   "dashboard-page": {
     "dev-menu": {
