--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -98,8 +98,11 @@
     "no-event-no-trigger": {
       "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
     },
-    "active-event-active-trigger": {
+    "no-event-active-trigger": {
       "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> away."
+    },
+    "active-event-active-trigger": {
+      "welcome": "There is an ongoing <strong>{{ disasterTypeLabel }}</strong> event. It first started on <strong>{{ startDateEvent }}</strong>. It is now ongoing for <strong>{{ timeOngoing }} {{ timeUnit }}(s)</strong>."
     },
     "active-event-no-trigger": {
       "welcome": "There is <strong>no active trigger</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
