--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -41,36 +41,72 @@
   },
   "areas-of-focus-summary-component": { "title": "Actions Summary" },
   "chat-component": {
-    "about-button-label": "About Trigger",
-    "warn-label": {
-      "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastModelRunDate}}</strong>."
+    "floods": {
+      "about-button-label": "About Trigger",
+      "warn-label": {
+        "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastModelRunDate}}</strong>."
+      },
+      "no-event-no-trigger": {
+        "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
+      },
+      "no-event-active-trigger": {
+        "welcome": "A trigger warning for a lead time of {{ activeLeadTime }} days was first activated on <strong>{{ startDate }}</strong> and has remained in trigger mode ever since. The event is now predicted to arrive in <strong>{{ leadTime }} {{ timeUnit }}(s)</strong>."
+      },
+      "active-event-active-trigger": {
+        "welcome": "A trigger warning for a lead time of {{ activeLeadTime }} days was first activated on <strong>{{ startDate }}</strong> and has remained in trigger mode ever since. The event is now predicted to arrive in <strong>{{ leadTime }} {{ timeUnit }}</strong>, but has been continually flagged to arrive in {{ leadTime }} {{ timeUnit }} for the last <strong>{{ timeOngoing }} {{ timeUnit }}s</strong>."
+      },
+      "active-event-no-trigger": {
+        "welcome": "There is <strong>no active trigger</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
+      },
+      "active-event": {
+        "instruction": "Please select the area on the map to monitor, select and send the pre-planned anticipatory actions executed in each area and eventually close the event. These actions are only available on the main admin-level.",
+        "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
+        "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
+        "submit-button-label": "Save",
+        "close-event-button": "Close Alert",
+        "update-success": "EAP action(s) updated in database.",
+        "update-failure": "Failed to update EAP action(s) in database.",
+        "prompt-button-label": "OK",
+        "close-event-popup": {
+          "message": "Are you sure? You are about to close the alert in {{ placeCodeName }}. This action can not be undone.",
+          "confirm": "Close Alert",
+          "cancel": "Cancel",
+          "failure": "Failed to close alert."
+        }
+      }
     },
-    "no-event-no-trigger": {
-      "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
-    },
-    "no-event-active-trigger": {
-      "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> away."
-    },
-    "active-event-active-trigger": {
-      "welcome": "There is an ongoing <strong>{{ disasterTypeLabel }}</strong> event. It first started on <strong>{{ startDateEvent }}</strong>. It is now ongoing for <strong>{{ timeOngoing }} {{ timeUnit }}(s)</strong>."
-    },
-    "active-event-no-trigger": {
-      "welcome": "There is <strong>no active trigger</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
-    },
-    "active-event": {
-      "instruction": "Please select the area on the map to monitor, select and send the pre-planned anticipatory actions executed in each area and eventually close the event. These actions are only available on the main admin-level.",
-      "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
-      "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
-      "submit-button-label": "Save",
-      "close-event-button": "Close Alert",
-      "update-success": "EAP action(s) updated in database.",
-      "update-failure": "Failed to update EAP action(s) in database.",
-      "prompt-button-label": "OK",
-      "close-event-popup": {
-        "message": "Are you sure? You are about to close the alert in {{ placeCodeName }}. This action can not be undone.",
-        "confirm": "Close Alert",
-        "cancel": "Cancel",
-        "failure": "Failed to close alert."
+    "drought": {
+      "about-button-label": "About Trigger",
+      "warn-label": {
+        "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastModelRunDate}}</strong>."
+      },
+      "no-event-no-trigger": {
+        "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
+      },
+      "no-event-active-trigger": {
+        "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> away."
+      },
+      "active-event-active-trigger": {
+        "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is now <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> away."
+      },
+      "active-event-no-trigger": {
+        "welcome": "There is <strong>no active trigger</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. This event stays visible here for 7 days after the end-date."
+      },
+      "active-event": {
+        "instruction": "Please select the area on the map to monitor, select and send the pre-planned anticipatory actions executed in each area and eventually close the event. These actions are only available on the main admin-level.",
+        "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
+        "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
+        "submit-button-label": "Save",
+        "close-event-button": "Close Alert",
+        "update-success": "EAP action(s) updated in database.",
+        "update-failure": "Failed to update EAP action(s) in database.",
+        "prompt-button-label": "OK",
+        "close-event-popup": {
+          "message": "Are you sure? You are about to close the alert in {{ placeCodeName }}. This action can not be undone.",
+          "confirm": "Close Alert",
+          "cancel": "Cancel",
+          "failure": "Failed to close alert."
+        }
       }
     },
     "heavy-rain": {
@@ -80,6 +116,9 @@
       },
       "no-event-no-trigger": {
         "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
+      },
+      "no-event-active-trigger": {
+        "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is estimated to arrive around <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> from now."
       },
       "active-event-active-trigger": {
         "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. It is estimated to arrive around <strong>{{ leadTime }} {{ timeUnit }}(s)</strong> from now."
@@ -111,6 +150,9 @@
       "no-event-no-trigger": {
         "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
       },
+      "no-event-active-trigger": {
+        "welcome": "A trigger warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>. It is estimated to make landfall at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>"
+      },
       "active-event-active-trigger": {
         "welcome": "A trigger warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>. It is estimated to make landfall at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>"
       },
@@ -141,6 +183,9 @@
       "no-event-no-trigger": {
         "welcome": "To your right is the map of your country, where you can turn layers on and off. There are currently <strong>no alerts</strong> for dengue activated."
       },
+      "no-event-active-trigger": {
+        "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ firstLeadTimeDate }}</strong>."
+      },
       "active-event-active-trigger": {
         "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ firstLeadTimeDate }}</strong>."
       },
@@ -161,6 +206,9 @@
       },
       "no-event-no-trigger": {
         "welcome": "To your right is the map of your country, where you can turn layers on and off. There are currently <strong>no alerts</strong> for malaria activated."
+      },
+      "no-event-active-trigger": {
+        "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ firstLeadTimeDate }}</strong>."
       },
       "active-event-active-trigger": {
         "welcome": "A trigger warning for <strong>{{ disasterTypeLabel }}</strong> was activated on <strong>{{ startDate }}</strong>. The trigger is activated for <strong>{{ firstLeadTimeDate }}</strong>."
