feat: redirect 'close event' to 'stop trigger' AB#12608 AB#12609

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -60,15 +60,15 @@
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
         "submit-button-label": "Save",
-        "close-event-button": "Close trigger",
+        "stop-trigger-button": "Stop trigger",
         "update-success": "EAP action(s) updated in database.",
         "update-failure": "Failed to update EAP action(s) in database.",
         "prompt-button-label": "OK",
-        "close-event-popup": {
-          "message": "Are you sure? You are about to close the trigger in {{ placeCodeName }}. This action can not be undone.",
-          "confirm": "Close trigger",
-          "cancel": "Cancel",
-          "failure": "Failed to close trigger."
+        "stop-trigger-popup": {
+          "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
+          "confirm": "Yes, stop trigger",
+          "cancel": "No, keep trigger",
+          "failure": "Failed to stop trigger."
         }
       }
     },
@@ -91,15 +91,15 @@
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
         "submit-button-label": "Save",
-        "close-event-button": "Close Trigger",
+        "stop-trigger-button": "Stop trigger",
         "update-success": "EAP action(s) updated in database.",
         "update-failure": "Failed to update EAP action(s) in database.",
         "prompt-button-label": "OK",
-        "close-event-popup": {
-          "message": "Are you sure? You are about to close the trigger in {{ placeCodeName }}. This action can not be undone.",
-          "confirm": "Close Trigger",
-          "cancel": "Cancel",
-          "failure": "Failed to close trigger."
+        "stop-trigger-popup": {
+          "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
+          "confirm": "Yes, stop trigger",
+          "cancel": "No, keep trigger",
+          "failure": "Failed to stop trigger."
         }
       }
     },
@@ -122,14 +122,15 @@
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
         "submit-button-label": "Save",
-        "close-event-button": "Close Alert",
+        "stop-trigger-button": "Stop alert",
         "update-success": "EAP action(s) updated in database.",
         "update-failure": "Failed to update EAP action(s) updated in database.",
         "prompt-button-label": "OK",
-        "close-event-popup": {
-          "message": "Are you sure? You are about to close the alert in {{ placeCodeName }}. This action can not be undone.",
-          "confirm": "Close Alert",
-          "cancel": "Cancel"
+        "stop-trigger-popup": {
+          "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
+          "confirm": "Yes, stop alert",
+          "cancel": "No, keep alert",
+          "failure": "Failed to stop alert."
         }
       }
     },
@@ -152,14 +153,15 @@
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
         "submit-button-label": "Save",
-        "close-event-button": "Close Trigger",
+        "stop-trigger-button": "Stop trigger",
         "update-success": "EAP action(s) updated in database.",
         "update-failure": "Failed to update EAP action(s) updated in database.",
         "prompt-button-label": "OK",
-        "close-event-popup": {
-          "message": "Are you sure? You are about to close the trigger in {{ placeCodeName }}. This action can not be undone.",
-          "confirm": "Close Trigger",
-          "cancel": "Cancel"
+        "stop-trigger-popup": {
+          "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
+          "confirm": "Yes, stop trigger",
+          "cancel": "No, keep trigger",
+          "failure": "Failed to stop trigger."
         }
       }
     },
@@ -182,14 +184,15 @@
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Potential cases: up to <strong>{{ exposedNumber }}</strong>",
         "submit-button-label": "Save",
-        "close-event-button": "Close Alert",
+        "stop-trigger-button": "Stop alert",
         "update-success": "SOP action(s) updated in database.",
         "update-failure": "Failed to update SOP action(s) updated in database.",
         "prompt-button-label": "OK",
-        "close-event-popup": {
-          "message": "Are you sure? You are about to close the alert in {{ placeCodeName }}. This action can not be undone.",
-          "confirm": "Close Alert",
-          "cancel": "Cancel"
+        "stop-trigger-popup": {
+          "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
+          "confirm": "Yes, stop alert",
+          "cancel": "No, keep alert",
+          "failure": "Failed to stop alert."
         }
       }
     },
@@ -212,14 +215,15 @@
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Potential cases: up to <strong>{{ exposedNumber }}</strong>",
         "submit-button-label": "Save",
-        "close-event-button": "Close Alert",
+        "stop-trigger-button": "Stop alert",
         "update-success": "SOP action(s) updated in database.",
         "update-failure": "Failed to update SOP action(s) updated in database.",
         "prompt-button-label": "OK",
-        "close-event-popup": {
-          "message": "Are you sure? You are about to close the alert in {{ placeCodeName }}. This action can not be undone.",
-          "confirm": "Close Alert",
-          "cancel": "Cancel"
+        "stop-trigger-popup": {
+          "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
+          "confirm": "Yes, stop alert",
+          "cancel": "No, keep alert",
+          "failure": "Failed to stop alert."
         }
       }
     }
